# sqlpp11-connector-skeleton

./: CMakeLists.txt  LICENSE  README.md
include/sqlpp11/skeleton/: bind_result.h  char_result.h  char_result_row.h  connection.h  connection_config.h  prepared_statement.h  serializer.h  skeleton.h
src/: CMakeLists.txt  bind_result.cpp  char_result.cpp  connection.cpp  prepared_statement.cpp
src/detail/: connection_handle.cpp  connection_handle.h  prepared_statement_handle.h  result_handle.h
tests/: CMakeLists.txt  SkeletonTest.cpp
